testing/font-teluguvijayam: update source urls

--- a/testing/font-teluguvijayam/APKBUILD
+++ b/testing/font-teluguvijayam/APKBUILD
@@ -2,35 +2,35 @@
 # Maintainer: Dhruvin Gandhi <contact@dhru.vin>
 pkgname=font-teluguvijayam
 pkgver=20190525
-pkgrel=2
+pkgrel=3
 pkgdesc="Silicon Andhra Telugu Vijayam Unicode Fonts"
-url="https://fonts.siliconandhra.org"
+url="https://siliconandhra.org/fonts"
 arch="noarch"
 license="OFL-1.1"
 depends="fontconfig mkfontscale"
-source="font-teluguvijayam-$pkgver-Gidugu.ttf::https://fonts.siliconandhra.org/Gidugu.ttf
-	font-teluguvijayam-$pkgver-Gurajada.ttf::https://fonts.siliconandhra.org/Gurajada.ttf
-	font-teluguvijayam-$pkgver-Suravaram.ttf::https://fonts.siliconandhra.org/Suravaram.ttf
-	font-teluguvijayam-$pkgver-NTR.ttf::https://fonts.siliconandhra.org/NTR.ttf
-	font-teluguvijayam-$pkgver-Mandali.ttf::https://fonts.siliconandhra.org/Mandali-Regular.ttf
-	font-teluguvijayam-$pkgver-NATS.ttf::https://fonts.siliconandhra.org/NATS.ttf
+source="font-teluguvijayam-$pkgver-Gidugu.ttf::https://siliconandhra.org/fonts/Gidugu.ttf
+	font-teluguvijayam-$pkgver-Gurajada.ttf::https://siliconandhra.org/fonts/Gurajada.ttf
+	font-teluguvijayam-$pkgver-Suravaram.ttf::https://siliconandhra.org/fonts/Suravaram.ttf
+	font-teluguvijayam-$pkgver-NTR.ttf::https://siliconandhra.org/fonts/NTR.ttf
+	font-teluguvijayam-$pkgver-Mandali.ttf::https://siliconandhra.org/fonts/Mandali-Regular.ttf
+	font-teluguvijayam-$pkgver-NATS.ttf::https://siliconandhra.org/fonts/NATS.ttf
 
-	font-teluguvijayam-$pkgver-SyamalaRamana.ttf::https://fonts.siliconandhra.org/SyamalaRamana.ttf
-	font-teluguvijayam-$pkgver-PottiSreeramulu.ttf::https://fonts.siliconandhra.org/PottiSreeramulu.ttf
+	font-teluguvijayam-$pkgver-SyamalaRamana.ttf::https://siliconandhra.org/fonts/SyamalaRamana.ttf
+	font-teluguvijayam-$pkgver-PottiSreeramulu.ttf::https://siliconandhra.org/fonts/PottiSreeramulu.ttf
 
-	font-teluguvijayam-$pkgver-SreeKrushnadevaraya.ttf::https://fonts.siliconandhra.org/Sree%20Krushnadevaraya.otf
-	font-teluguvijayam-$pkgver-Peddana.ttf::https://fonts.siliconandhra.org/Peddana-Regular.ttf
-	font-teluguvijayam-$pkgver-Timmana.ttf::https://fonts.siliconandhra.org/TimmanaRegular.ttf
-	font-teluguvijayam-$pkgver-TenaliRamakrishna.ttf::https://fonts.siliconandhra.org/TenaliRamakrishna-Regular.ttf
-	font-teluguvijayam-$pkgver-Suranna.ttf::https://fonts.siliconandhra.org/suranna.ttf
-	font-teluguvijayam-$pkgver-Ramaraja.ttf::https://fonts.siliconandhra.org/Ramaraja-Regular.ttf
-	font-teluguvijayam-$pkgver-Mallanna.ttf::https://fonts.siliconandhra.org/mallanna.ttf
-	font-teluguvijayam-$pkgver-Dhurjati.ttf::https://fonts.siliconandhra.org/dhurjati.ttf
-	font-teluguvijayam-$pkgver-Ramabhadra.ttf::https://fonts.siliconandhra.org/ramabhadra.ttf
+	font-teluguvijayam-$pkgver-SreeKrushnadevaraya.ttf::https://siliconandhra.org/fonts/Sree%20Krushnadevaraya.otf
+	font-teluguvijayam-$pkgver-Peddana.ttf::https://siliconandhra.org/fonts/Peddana-Regular.ttf
+	font-teluguvijayam-$pkgver-Timmana.ttf::https://siliconandhra.org/fonts/TimmanaRegular.ttf
+	font-teluguvijayam-$pkgver-TenaliRamakrishna.ttf::https://siliconandhra.org/fonts/TenaliRamakrishna-Regular.ttf
+	font-teluguvijayam-$pkgver-Suranna.ttf::https://siliconandhra.org/fonts/suranna.ttf
+	font-teluguvijayam-$pkgver-Ramaraja.ttf::https://siliconandhra.org/fonts/Ramaraja-Regular.ttf
+	font-teluguvijayam-$pkgver-Mallanna.ttf::https://siliconandhra.org/fonts/mallanna.ttf
+	font-teluguvijayam-$pkgver-Dhurjati.ttf::https://siliconandhra.org/fonts/dhurjati.ttf
+	font-teluguvijayam-$pkgver-Ramabhadra.ttf::https://siliconandhra.org/fonts/ramabhadra.ttf
 
-	font-teluguvijayam-$pkgver-Ponnala.ttf::https://fonts.siliconandhra.org/Ponnala.ttf
-	font-teluguvijayam-$pkgver-RaviPrakash.ttf::https://fonts.siliconandhra.org/RaviPrakash.ttf
-	font-teluguvijayam-$pkgver-LakkiReddy.ttf::https://fonts.siliconandhra.org/LakkiReddy.ttf
+	font-teluguvijayam-$pkgver-Ponnala.ttf::https://siliconandhra.org/fonts/Ponnala.ttf
+	font-teluguvijayam-$pkgver-RaviPrakash.ttf::https://siliconandhra.org/fonts/RaviPrakash.ttf
+	font-teluguvijayam-$pkgver-LakkiReddy.ttf::https://siliconandhra.org/fonts/LakkiReddy.ttf
 	"
 options="!check" # is a font
 
