--- a/testing/sc-im/APKBUILD
+++ b/testing/sc-im/APKBUILD
@@ -3,12 +3,17 @@
 maintainer="Celeste <cielesti@protonmail.com>"
 pkgname=sc-im
 pkgver=0.8.4
-pkgrel=0
+pkgrel=1
 pkgdesc="ncurses spreadsheet program based on SC"
 url="https://github.com/andmarti1424/sc-im"
 arch="all"
 license="BSD-4-Clause"
-makedepends="bison ncurses-dev"
+makedepends="
+	bison
+	libxml2-dev
+	libzip-dev
+	ncurses-dev
+	"
 subpackages="$pkgname-doc"
 source="$pkgname-$pkgver.tar.gz::https://github.com/andmarti1424/sc-im/archive/v$pkgver.tar.gz"
 options="!check" # TODO: run proper tests, perhaps upstream PR 385
