--- a/main/util-linux/APKBUILD
+++ b/main/util-linux/APKBUILD
@@ -3,7 +3,7 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=util-linux
 pkgver=2.41
-pkgrel=0
+pkgrel=1
 pkgdesc="Random collection of Linux utilities"
 url="https://git.kernel.org/cgit/utils/util-linux/util-linux.git"
 arch="all"
@@ -88,6 +88,8 @@ source="https://www.kernel.org/pub/linux/utils/util-linux/v$_v/util-linux-$pkgve
 	rfkill.confd
 	rfkill.initd
 	su-l.pamd
+
+	libmount-fix-no-canonicalize-regression.patch
 	"
 
 # secfixes:
@@ -362,4 +364,5 @@ c1c9cd816d20582438cda75a9c0ea4e687eee124e657172729aff410f52558be19cc5d649dae07c0
 401d2ccbdbfb0ebd573ac616c1077e2c2b79ff03e9221007759d8ac25eb522c401f705abbf7daac183d5e8017982b8ec5dd0a5ebad39507c5bb0a9f31f04ee97  rfkill.confd
 b0e11226c611fd52d54f599a40d23c4f748d5bd6971732dba2d25581aedaf5d2c62bcb49515d175569ff9aa1cf49a3dff25d1a5d4dcd89428c7020fc7ea3a581  rfkill.initd
 0c8e764308ac1d084ebb4246eb97203de983bc0170066c958a56b412d9fd2f98da7f78f059e59512542c56a2639d6b2da35eff6469a48ebce6b2c406e94a96a7  su-l.pamd
+8dee9e9ff5a8c4aace166b81b65bbaff4b621750dac24685d3c81cecc078d61e1ae606cef00c2e38a537608ba2abb775c1b59bce84abe23bbcebceea1b3b4209  libmount-fix-no-canonicalize-regression.patch
 "
