community/cloud-init: take over maintainership
Closes: https://gitlab.alpinelinux.org/alpine/aports/-/issues/17049

--- a/community/cloud-init/APKBUILD
+++ b/community/cloud-init/APKBUILD
@@ -1,9 +1,9 @@
 # Contributor: Matt Dainty <matt+alpine@bodgit-n-scarper.com>
 # Contributor: Dermot Bradley <dermot_bradley@yahoo.com>
-# Maintainer:
+maintainer="fossdd <fossdd@pwned.life>"
 pkgname=cloud-init
 pkgver=24.3.1
-pkgrel=0
+pkgrel=1
 pkgdesc="Cloud instance init scripts"
 url="https://cloud-init.io"
 # s390x: blocked by cloud-utils-growpart
