community/kunifiedpush: upgrade to 24.12.3

--- a/community/kunifiedpush/APKBUILD
+++ b/community/kunifiedpush/APKBUILD
@@ -1,9 +1,9 @@
 # The group tag is just to easily find this APKBUILD by some scripts for automation
-# group=kde-other
+# group=kde-applications
 maintainer="team/kde <bribbers@disroot.org>"
 pkgname=kunifiedpush
-pkgver=1.0.0
-pkgrel=1
+pkgver=24.12.3
+pkgrel=0
 # armhf blocked by qt6-qtdeclarative
 arch="all !armhf"
 url="https://invent.kde.org/libraries/kunifiedpush"
@@ -31,7 +31,7 @@ subpackages="
 	$pkgname-lang
 	"
 _repo_url="https://invent.kde.org/libraries/kunifiedpush.git"
-source="https://download.kde.org/stable/kunifiedpush/kunifiedpush-$pkgver.tar.xz"
+source="https://download.kde.org/stable/release-service/$pkgver/src/kunifiedpush-$pkgver.tar.xz"
 
 build() {
 	cmake -B build -G Ninja \
@@ -42,7 +42,7 @@ build() {
 }
 
 check() {
-	dbus-run-session -- ctest --test-dir build -E "connectortest"
+	dbus-run-session ctest --test-dir build -E "connectortest"
 }
 
 package() {
@@ -50,5 +50,5 @@ package() {
 }
 
 sha512sums="
-daeb94d768637277c1f632541c13dc93c49e238c8a8db6d88c8f454f248c18c0ce39e19322188ae83530da467535b908b5c2daf5a6a9a15133db8ae608568454  kunifiedpush-1.0.0.tar.xz
+fde0c44b7f34c5abd685efbc91f780780c39294725d1f102059436115fb1fef22d7d23bb9c0dc4e988e76b5dca0a384aba3e247566735876e53cc08e37e35697  kunifiedpush-24.12.3.tar.xz
 "
