community/qt5-qtsystems: upgrade to 0_git20230712

--- a/community/qt5-qtsystems/APKBUILD
+++ b/community/qt5-qtsystems/APKBUILD
@@ -1,11 +1,11 @@
 # Contributor: Bart Ribbers <bribbers@disroot.org>
 # Maintainer: Bart Ribbers <bribbers@disroot.org>
 pkgname=qt5-qtsystems
-pkgver=0_git20190103
-pkgrel=3
-_commit="e3332ee38d27a134cef6621fdaf36687af1b6f4a"
+pkgver=0_git20230712
+pkgrel=0
+_commit="81e08ee508d0a49c588705cc9c47568b09a258db"
 pkgdesc="Qt Systems"
-arch="all !armhf" # Blocked by qt5-qtdeclarative-dev
+arch="all !armhf" # qt5-qtdeclarative is broken on armhf
 url="https://qt-project.org/"
 license="LGPL-2.1-only AND LGPL-3.0-only AND GPL-3.0-only AND Qt-GPL-exception-1.0"
 depends_dev="qt5-qtdeclarative-dev"
@@ -36,4 +36,7 @@ package() {
 	install -d "$pkgdir"/usr/share/licenses
 	ln -s qt5-base "$pkgdir"/usr/share/licenses/$pkgname
 }
-sha512sums="48ed8353a021892cb226a5cb99de1919a48638ddf765094f47c204e8699892e33f66a39d717bfd238516b9529d2158227be8c510f4f1a7ddb68901e6e7cb0e85  qtsystem-e3332ee38d27a134cef6621fdaf36687af1b6f4a.tar.gz"
+
+sha512sums="
+5996b398789e5ebbcceb7e2817e331b951960e52fb8cbf689578f6c7e4179e5de30ed6948cf0696457aab59b9fe84fc75e0e3707164978de7d01a1e102d844ea  qtsystem-81e08ee508d0a49c588705cc9c47568b09a258db.tar.gz
+"
