--- a/community/rspamd/APKBUILD
+++ b/community/rspamd/APKBUILD
@@ -6,7 +6,7 @@
 # Maintainer: Duncan Bellamy <dunk@denkimushi.com>
 pkgname=rspamd
 pkgver=3.11.1
-pkgrel=0
+pkgrel=1
 pkgdesc="Fast, free and open-source spam filtering system"
 url="https://rspamd.com/"
 arch="all"
@@ -38,12 +38,16 @@ makedepends="
 	zlib-dev
 	zstd-dev
 	"
-case "$CARCH" in
-	riscv64|s390x|x86|loongarch64) makedepends="$makedepends lua5.4-dev"
-		_luajit="OFF" ;;
-	*) makedepends="$makedepends luajit-dev"
-		_luajit="ON" ;;
-esac
+# luajit disabled due to failed rspamd_resolver test cases with icu 76.1
+# https://github.com/rspamd/rspamd/issues/5263
+# case "$CARCH" in
+# 	riscv64|s390x|x86|loongarch64) makedepends="$makedepends lua5.4-dev"
+# 		_luajit="OFF" ;;
+# 	*) makedepends="$makedepends luajit-dev"
+# 		_luajit="ON" ;;
+# esac
+makedepends="$makedepends lua5.4-dev"
+_luajit="OFF"
 install="$pkgname.pre-install $pkgname.post-upgrade"
 subpackages="
 	$pkgname-dbg
