community/libgit2: fix code comment termination
https://github.com/libgit2/libgit2/commit/2fa13adf09c8dd1f334f57023390043ea3f71cb2

--- a/community/libgit2/APKBUILD
+++ b/community/libgit2/APKBUILD
@@ -4,7 +4,7 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=libgit2
 pkgver=1.9.0
-pkgrel=1
+pkgrel=2
 pkgdesc="linkable library for Git"
 url="https://libgit2.org/"
 arch="all"
@@ -15,6 +15,7 @@ makedepends_build="python3 cmake samurai"
 subpackages="$pkgname-dbg $pkgname-static $pkgname-dev $pkgname-tools $pkgname-tests::noarch"
 options="net"
 source="$pkgname-$pkgver.tar.gz::https://github.com/libgit2/libgit2/archive/v$pkgver.tar.gz
+	fix-stdint-h.patch
 	fix-util-tests.patch
 	fix-version-h.patch
 	no-online-test.patch
@@ -103,7 +104,8 @@ tests() {
 
 sha512sums="
 38547ace676b933a3146c2a00405fc6815063a7af923b9f2c09c536ec717be77d19c513b383939054913ce617d7917c100a5cbd3378d101fcdb5eacd1d14f687  libgit2-1.9.0.tar.gz
+948f225d728c60f8f14c660f1389c9824eb028d070d6bce917d2e1687e153a74dcf422373dece70fbbf650b405b6ff4eea2c11f83d6347cf6bd55fe8f47bc991  fix-util-tests.patch
+3fa89f4f1c9bd62e62a701744a921ab5fd874bbf90406caf994d665a77d2a3e93b3d6c5d36ede18c2f748e795045e0d98f9be264c2836dcf2991898d6fda10d7  fix-stdint-h.patch
 8ece3137dfae126caa90964020b057659c7f3cd3a071b14422e40f0de55f91ae095cfccd2c5749097e2b4f93901aa02d63730362a9f15d016b368fd3d995a24f  fix-version-h.patch
 584dba40340533a9dec103a0bb766c8b96e1f255edf3cd56ddcf86edd711fa9666dcff8bfbc077648d6a2246f9edf8948951f77250610fe8f1b8b459e9598956  no-online-test.patch
-948f225d728c60f8f14c660f1389c9824eb028d070d6bce917d2e1687e153a74dcf422373dece70fbbf650b405b6ff4eea2c11f83d6347cf6bd55fe8f47bc991  fix-util-tests.patch
 "
