community/jujutsu: upgrade to 0.28.0

--- a/community/jujutsu/APKBUILD
+++ b/community/jujutsu/APKBUILD
@@ -1,7 +1,7 @@
 # Maintainer: Celeste <cielesti@protonmail.com>
 maintainer="Celeste <cielesti@protonmail.com>"
 pkgname=jujutsu
-pkgver=0.27.0
+pkgver=0.28.0
 pkgrel=0
 pkgdesc="Git-compatible distributed version control system"
 url="https://github.com/jj-vcs/jj"
@@ -18,7 +18,12 @@ makedepends="
 	openssl-dev
 	zstd-dev
 	"
-checkdepends="openssh-keygen"
+checkdepends="
+	gpg
+	gpg-agent
+	gpgsm
+	openssh-keygen
+	"
 subpackages="
 	$pkgname-doc
 	$pkgname-bash-completion
@@ -26,7 +31,7 @@ subpackages="
 	$pkgname-zsh-completion
 	"
 source="https://github.com/jj-vcs/jj/archive/v$pkgver/jujutsu-$pkgver.tar.gz
-	libgit2-1.9-compat.patch
+	0001-Fix-tests.patch
 	"
 builddir="$srcdir/jj-$pkgver"
 options="net" # cargo fetch
@@ -34,6 +39,13 @@ options="net" # cargo fetch
 export LIBGIT2_NO_VENDOR=1 # use system libgit2
 export LIBSSH2_SYS_USE_PKG_CONFIG=1
 export ZSTD_SYS_USE_PKG_CONFIG=1
+
+if [ "$CARCH" != "loongarch64" ]; then
+	checkdepends="
+		$checkdepends
+		taplo
+		"
+fi
 
 # taken from main/rust/APKBUILD
 _clear_vendor_checksums() {
@@ -65,6 +77,9 @@ check() {
 	aarch64)
 		_test_args="-- --skip test_git::test_shallow_commits_lack_parents"
 		;;
+	loongarch64)
+		_test_args="-- --skip test_config_schema"
+		;;
 	esac
 
 	cargo test --frozen $_test_args
@@ -87,6 +102,6 @@ package() {
 }
 
 sha512sums="
-ed0ea8a425ddb800ab804440cfc4bcfbcee10fd209c310b7f9a188906925e0f34f627f4e74c484a72912d95baf1f1d67783852333cebe194a7cf48d593918350  jujutsu-0.27.0.tar.gz
-41b91bafaf5310ab32719cc7a6179696451d0ed8d9c32f88c465bf185876612eac5f8d24352576c3e79250e6235ebadb37ef663851f8e367ae5a73675d08b250  libgit2-1.9-compat.patch
+f3af382d88647cc5c87f09bf16067c5f1a77181a0f0bdbde6356c651c39e06105aad6cb1a19ac2d9c976417b2004b394ec6a47432182ffdd38ec8fa7e8ca2ac2  jujutsu-0.28.0.tar.gz
+c819c61fa35f5ba8b54b38ed4d7ae0bd5384cbbcbb68b103d8349ba3a40f3099eebf7fa86ae5122257cff88e99a6961403513df3d2aafa3568c51fa054700a70  0001-Fix-tests.patch
 "
