--- a/community/klibc/APKBUILD
+++ b/community/klibc/APKBUILD
@@ -1,6 +1,6 @@
 # Contributor: Olliver Schinagl <oliver@schinagl.nl>
 # Maintainer: Olliver Schinagl <oliver@schinagl.nl>
-pkgname="klibc"
+pkgname=klibc
 pkgver=2.0.14
 pkgrel=0
 pkgdesc="A minimalistic libc subset for use with initramfs"
@@ -9,27 +9,27 @@ arch="all"
 license="GPL-2.0-or-later"
 makedepends="linux-headers perl"
 subpackages="
-	${pkgname}-dash
-	${pkgname}-dev
-	${pkgname}-doc
-	${pkgname}-static:static
-	${pkgname}-fstype:bins
-	${pkgname}-ipconfig:bins
-	${pkgname}-kinit::noarch
-	${pkgname}-klcc::noarch
-	${pkgname}-nfsmount:bins
-	${pkgname}-resume:bins
-	${pkgname}-run-init:bins
-	${pkgname}-utils
-	lib${pkgname}:libs
+	$pkgname-dash
+	$pkgname-dev
+	$pkgname-doc
+	$pkgname-static:static
+	$pkgname-fstype:bins
+	$pkgname-ipconfig:bins
+	$pkgname-kinit::noarch
+	$pkgname-klcc::noarch
+	$pkgname-nfsmount:bins
+	$pkgname-resume:bins
+	$pkgname-run-init:bins
+	$pkgname-utils
+	lib$pkgname:libs
 "
 source="
-	https://git.kernel.org/pub/scm/libs/klibc/klibc.git/snapshot/${pkgname}-${pkgver}.tar.gz
+	https://git.kernel.org/pub/scm/libs/klibc/klibc.git/snapshot/klibc-$pkgver.tar.gz
 
-	lib${pkgname}.post-deinstall
-	lib${pkgname}.post-install
+	lib$pkgname.post-deinstall
+	lib$pkgname.post-install
 "
-_installdir="/usr/lib/${pkgname}-${CARCH}/"
+_installdir="/usr/lib/$pkgname-$CARCH/"
 
 # secfixes:
 #   2.0.9-r0:
@@ -41,14 +41,14 @@ _installdir="/usr/lib/${pkgname}-${CARCH}/"
 build() {
 	# klibc's header misses the struct declaration, Linux's misses
 	# the function declaration. Combine them here.
-	if [ ! -e "${builddir}/usr/include/sys/sysinfo.h.orig" ]; then
-		mv "${builddir}/usr/include/sys/sysinfo.h" \
-		   "${builddir}/usr/include/sys/sysinfo.h.orig"
+	if [ ! -e "$builddir/usr/include/sys/sysinfo.h.orig" ]; then
+		mv "$builddir/usr/include/sys/sysinfo.h" \
+		   "$builddir/usr/include/sys/sysinfo.h.orig"
 	fi
 	cat \
 	    "/usr/include/linux/sysinfo.h" \
-	    "${builddir}/usr/include/sys/sysinfo.h.orig" > \
-	    "${builddir}/usr/include/sys/sysinfo.h"
+	    "$builddir/usr/include/sys/sysinfo.h.orig" > \
+	    "$builddir/usr/include/sys/sysinfo.h"
 
 	make \
 	     KBUILD_REPRODUCIBLE=1 \
@@ -64,13 +64,13 @@ check() {
 
 package() {
 	depends="
-		lib${pkgname}
-		${pkgname}-dash
-		${pkgname}-kinit
-		${pkgname}-utils
+		lib$pkgname
+		$pkgname-dash
+		$pkgname-kinit
+		$pkgname-utils
 	"
 
-case "${CARCH}" in
+case "$CARCH" in
 	aarch64)
 		_klibcarch="arm64"
 		;;
@@ -109,8 +109,8 @@ case "${CARCH}" in
 	export CPU_ARCH
 	export CPU_TUNE
 	make \
-	     INSTALLDIR="${_installdir}" \
-	     INSTALLROOT="${pkgdir}" \
+	     INSTALLDIR="$_installdir" \
+	     INSTALLROOT="$pkgdir" \
 	     KBUILD_REPRODUCIBLE=1 \
 	     KLIBCKERNELSRC="/usr/" \
 	     mandir="/usr/share/man" \
@@ -119,94 +119,94 @@ case "${CARCH}" in
 	# Duplicated in INSTALLDIR/lib and replaced with post.install
 	rm -r "${pkgdir:?}/lib"
 
-	for _arch in "${pkgdir}/${_installdir}/include/arch/"*; do
-		if [ "${_arch##*/}" != "${_klibcarch}" ]; then
+	for _arch in "$pkgdir/$_installdir/include/arch/"*; do
+		if [ "${_arch##*/}" != "$_klibcarch" ]; then
 			rm -r "${_arch:?}"
 		fi
 	done
 
 	# Replace hardlinks with symlinks
-	unlink "${pkgdir}/${_installdir}/bin/gunzip"
-	unlink "${pkgdir}/${_installdir}/bin/poweroff"
-	unlink "${pkgdir}/${_installdir}/bin/reboot"
-	unlink "${pkgdir}/${_installdir}/bin/zcat"
+	unlink "$pkgdir/$_installdir/bin/gunzip"
+	unlink "$pkgdir/$_installdir/bin/poweroff"
+	unlink "$pkgdir/$_installdir/bin/reboot"
+	unlink "$pkgdir/$_installdir/bin/zcat"
 
-	ln -s "gzip" "${pkgdir}/${_installdir}/bin/gunzip"
-	ln -s "gzip" "${pkgdir}/${_installdir}/bin/zcat"
+	ln -s "gzip" "$pkgdir/$_installdir/bin/gunzip"
+	ln -s "gzip" "$pkgdir/$_installdir/bin/zcat"
 
-	ln -s "halt" "${pkgdir}/${_installdir}/bin/poweroff"
-	ln -s "halt" "${pkgdir}/${_installdir}/bin/reboot"
+	ln -s "halt" "$pkgdir/$_installdir/bin/poweroff"
+	ln -s "halt" "$pkgdir/$_installdir/bin/reboot"
 }
 
 klcc() {
 	depends="perl"
 
-	mkdir -p "${subpkgdir}/usr/bin"
-	mv "${pkgdir}/usr/bin/klcc" "${subpkgdir}/usr/bin/"
+	mkdir -p "$subpkgdir/usr/bin"
+	mv "$pkgdir/usr/bin/klcc" "$subpkgdir/usr/bin/"
 }
 
 libs() {
-	install="lib${pkgname}.post-deinstall lib${pkgname}.post-install"
+	install="lib$pkgname.post-deinstall lib$pkgname.post-install"
 
-	mkdir -p "${subpkgdir}/${_installdir}"
-	mv "${pkgdir}/${_installdir}/lib" "${subpkgdir}/${_installdir}/"
+	mkdir -p "$subpkgdir/$_installdir"
+	mv "$pkgdir/$_installdir/lib" "$subpkgdir/$_installdir/"
 }
 
 bins() {
-	depends="lib${pkgname}"
+	depends="lib$pkgname"
 
-	mkdir -p "${subpkgdir}/${_installdir}/bin"
-	mv "${pkgdir}/${_installdir}/bin/${subpkgname#${pkgname}-}" "${subpkgdir}/${_installdir}/bin/"
+	mkdir -p "$subpkgdir/$_installdir/bin"
+	mv "$pkgdir/$_installdir/bin/${subpkgname#"$pkgname"-}" "$subpkgdir/$_installdir/bin/"
 }
 
 dash() {
-	depends="lib${pkgname}"
+	depends="lib$pkgname"
 
-	mkdir -p "${subpkgdir}/${_installdir}/bin"
-	mv "${pkgdir}/${_installdir}/bin/sh" "${subpkgdir}/${_installdir}/bin/"
+	mkdir -p "$subpkgdir/$_installdir/bin"
+	mv "$pkgdir/$_installdir/bin/sh" "$subpkgdir/$_installdir/bin/"
 }
 
 kinit() {
 	depends="
-		${pkgname}-fstype
-		${pkgname}-ipconfig
-		${pkgname}-nfsmount
-		${pkgname}-resume
-		${pkgname}-run-init
+		$pkgname-fstype
+		$pkgname-ipconfig
+		$pkgname-nfsmount
+		$pkgname-resume
+		$pkgname-run-init
 	"
 
-	mkdir -p "${subpkgdir}"
+	mkdir -p "$subpkgdir"
 }
 
 utils() {
-	depends="lib${pkgname}"
+	depends="lib$pkgname"
 
-	mkdir -p "${subpkgdir}/${_installdir}/"
-	mv "${pkgdir}/${_installdir}/bin" "${subpkgdir}/${_installdir}/"
+	mkdir -p "$subpkgdir/$_installdir/"
+	mv "$pkgdir/$_installdir/bin" "$subpkgdir/$_installdir/"
 }
 
 static() {
-	mkdir -p "${subpkgdir}/${_installdir}/bin"
+	mkdir -p "$subpkgdir/$_installdir/bin"
 
-	find "${builddir}" -type d -name 'static' | while read -r _staticbins; do
-		for _bin in "${_staticbins}/"*; do
+	find "$builddir" -type d -name 'static' | while read -r _staticbins; do
+		for _bin in "$_staticbins/"*; do
 			if [ -z "${_bin%%*.g}" ]; then
 				continue
 			fi
 
 			install -D -m 755 "${_bin}" \
-			        "${subpkgdir}/${_installdir}/bin/${_bin##*/}.static"
+			        "$subpkgdir/$_installdir/bin/${_bin##*/}.static"
 		done
 	done
 
-	mv "${pkgdir}/${_installdir}/bin/gunzip" \
-	   "${subpkgdir}/${_installdir}/bin/gunzip.static"
+	mv "$pkgdir/$_installdir/bin/gunzip" \
+	   "$subpkgdir/$_installdir/bin/gunzip.static"
 
-	mv "${pkgdir}/${_installdir}/bin/gzip" \
-	   "${subpkgdir}/${_installdir}/bin/gzip.static"
+	mv "$pkgdir/$_installdir/bin/gzip" \
+	   "$subpkgdir/$_installdir/bin/gzip.static"
 
-	mv "${pkgdir}/${_installdir}/bin/zcat" \
-	   "${subpkgdir}/${_installdir}/bin/zcat.static"
+	mv "$pkgdir/$_installdir/bin/zcat" \
+	   "$subpkgdir/$_installdir/bin/zcat.static"
 }
 
 sha512sums="
