testing/lomiri-download-manager: upgrade to 0.2.0

--- a/testing/lomiri-download-manager/APKBUILD
+++ b/testing/lomiri-download-manager/APKBUILD
@@ -2,8 +2,8 @@
 # Contributor: Bart Ribbers <bribbers@disroot.org>
 # Contributor: Antoni Aloy <aaloytorrens@gmail.com>
 pkgname=lomiri-download-manager
-pkgver=0.1.3
-pkgrel=5
+pkgver=0.2.0
+pkgrel=0
 pkgdesc="Provides a service for downloading files while an application is suspended"
 arch="all"
 url="https://gitlab.com/ubports/development/core/lomiri-download-manager"
@@ -23,13 +23,13 @@ makedepends="
 	doxygen
 	gmock
 	graphviz
+	libapparmor-dev
 	samurai
 	"
 checkdepends="dbus-test-runner xvfb-run"
 source="https://gitlab.com/ubports/development/core/lomiri-download-manager/-/archive/$pkgver/lomiri-download-manager-$pkgver.tar.gz
-	0001-Use-CMAKE_INSTALL_FULL_-for-installing.patch
-	0002-Find-qdoc-correctly-on-distros-without-qtchooser.patch
-	0003-treewide-Switch-to-glog-CMake-module.patch
+	0001-Find-qdoc-correctly-on-distros-without-qtchooser.patch
+	0002-Revert-tests-common-workaround-CMake-dependency-bug.patch
 	"
 subpackages="$pkgname-dev $pkgname-doc $pkgname-lang"
 
@@ -53,8 +53,7 @@ package() {
 }
 
 sha512sums="
-693dbaa85dc227a2c1ed26acc4bf662c888f45df544868906c9d405c62e32215a4825e03ba548ce3aa38f7c9a0c9c7c8e58198c4384c54aec343dfa47b7ab99c  lomiri-download-manager-0.1.3.tar.gz
-ba253dcfef4de15a583bfa28e5f735c7d219474b6904aeb9e03bc13d82c80877b8a4ea55516af457a9918570f766165d4f5de4daf1b0c6c891f9d832f8ce973e  0001-Use-CMAKE_INSTALL_FULL_-for-installing.patch
-81fcae38d6e22f4e315c859976e8dc3940571d93c18070b13d26e2a0941c0e401d98110960f7ebc1af7a0016528e3f6c30f1758bb6ff21535d35687992988c29  0002-Find-qdoc-correctly-on-distros-without-qtchooser.patch
-92e6fb0c2b5ea3b7c3ee6f2b41e9dbe1ef10c8a7895119f924cffa6122e69e3145ee4d2b42c504ba52dac51762783faa38e900a4b28e1f6d1e0820b2a4403eab  0003-treewide-Switch-to-glog-CMake-module.patch
+a22941e89191a65b17051d241b2c7cf415a5da2de116fc7b3d10c6fe5ec0a9c7271fba05e00cf2f07480bc73a6ac2683bed3fe9c7dab7c4ec7338137d5b93fb9  lomiri-download-manager-0.2.0.tar.gz
+e7607bb176359f6c9cdcb50bfde25551fc3b03ce386a55596a152aa30827bdbb27477300c1dbc505d43592c9a492ebe2d528c610425ccfb172ab9332c183be1c  0001-Find-qdoc-correctly-on-distros-without-qtchooser.patch
+2b03fccf122a1dc3b6f7f930d7147cc07c63d444ef2cdcb66629f416c3065075e1131c53116efbdc199e12de302ae14e5aa66f5959294824c108233df5e85a0b  0002-Revert-tests-common-workaround-CMake-dependency-bug.patch
 "
