community/thunderbird: upgrade to 137.0.1

--- a/community/thunderbird/APKBUILD
+++ b/community/thunderbird/APKBUILD
@@ -1,11 +1,11 @@
 # Contributor: Joseph Benden <joe@benden.us>
 # Maintainer: Patrycja Rosa <alpine@ptrcnull.me>
 pkgname=thunderbird
-pkgver=137.0
+pkgver=137.0.1
 pkgrel=0
 pkgdesc="Thunderbird email client"
 url="https://www.thunderbird.net/"
-arch="all !armhf !s390x" # OOM when compiling
+arch="all !armhf" # blocked by openmp and broken rust neon code
 license="GPL-3.0-or-later AND LGPL-2.1-or-later AND MPL-2.0"
 depends="libotr"
 _llvmver=19
@@ -449,6 +449,16 @@ build() {
 		export MOZCONFIG=lto-mozconfig
 	esac
 
+	case "$CARCH" in
+	# mimalloc clashes with scudo in a weird way here
+	x86) ;;
+	# default allocator returns oom ( and, in turn, std::bad_alloc in clang )
+	# at even ~70% of host memory usage
+	*)
+		export LD_PRELOAD=/usr/lib/libmimalloc-insecure.so.2
+		;;
+	esac
+
 	./mach build
 }
 
@@ -491,7 +501,7 @@ package() {
 }
 
 sha512sums="
-252c3adef18c14e52388b11a2646df7caa7e85d1697336ebe9aeb94ad5a37f8dc48d1e61066e94fed6ddea0b27705a7a76a3215456acde5066191db72323ab88  thunderbird-137.0.source.tar.xz
+387f04aff9380c7261c574e7ef2e4972d63ebfb2768e25aa41a5ee2f3a755780a84099532cf4c1b5635db3412ab543e9b17b0a0476ec06c547b2dc678f19795f  thunderbird-137.0.1.source.tar.xz
 616169325dc7715d3ff558c1846394d992f1a0a9427af5339e84abf3d9e7d85a5f9f6bae218ee3416ef39769a56150ac35881435ac09b976876fd556fddeac38  abseil-cpp.patch
 106f168dc37a693e279f821695637e0ac0d3534b07f093ac835c5b11f604ad2f11817bbe9604009e27a2b1410c6584a84fe388621170f511914e3e8aa154639e  bmo-1928504-enable-relr.patch
 32c566a1529d36b4816cef80bb56f0723d0ec2e407e5e4a61cd278d40dafa3a3032d5a77497f191989f4954fa3ee539845dd170a596e0b22c6ef5b337405a72e  bmo-1952657-no-execinfo.patch
