community/py3-authlib: upgrade to 1.5.2
https://github.com/lepture/authlib/blob/v1.5.2/docs/changelog.rst

--- a/community/py3-authlib/APKBUILD
+++ b/community/py3-authlib/APKBUILD
@@ -1,7 +1,7 @@
 # Contributor: Rasmus Thomsen <oss@cogitri.dev>
 maintainer="fossdd <fossdd@pwned.life>"
 pkgname=py3-authlib
-pkgver=1.5.1
+pkgver=1.5.2
 pkgrel=0
 pkgdesc="Python library for building OAuth and OpenID Connect servers"
 url="https://github.com/lepture/authlib"
@@ -27,9 +27,9 @@ check() {
 
 package() {
 	python3 -m installer -d "$pkgdir" \
-		.dist/Authlib*.whl
+		.dist/*.whl
 }
 
 sha512sums="
-595030e90e441cf510b31af820e99041f323a249530648c49973df02e2a7d38738232a4916e39c3ce9d3317e7f3a1accd0cbc9de895b0b22dbe6d3bf7e26405e  authlib-1.5.1.tar.gz
+ac7a989f646e34d9b712d951a7024e5dbab9103b922152ce54840f60be208ffde8761a64bf4a49937edf9bddd974bbe04ee849848022248f5c5fd95667a555ed  authlib-1.5.2.tar.gz
 "
