--- a/community/gamescope/APKBUILD
+++ b/community/gamescope/APKBUILD
@@ -1,6 +1,6 @@
 # Contributor: Alisa <corg@disroot.org>
 # Contributor: Maxim Karasev <begs@disroot.org>
-# Maintainer: fossdd <fossdd@pwned.life>
+maintainer="fossdd <fossdd@pwned.life>"
 pkgname=gamescope
 pkgver=3.16.3
 pkgrel=0
