--- a/testing/cosmic-session/APKBUILD
+++ b/testing/cosmic-session/APKBUILD
@@ -3,7 +3,7 @@
 pkgname=cosmic-session
 pkgver=1.0.0_alpha6
 _upstreamver="${pkgver/_alpha/-alpha.}"
-pkgrel=0
+pkgrel=1
 pkgdesc="Session manager for the COSMIC Desktop Environment"
 url="https://github.com/pop-os/cosmic-session"
 arch="x86_64 aarch64"
@@ -38,7 +38,11 @@ makedepends="
 	wayland-protocols
 "
 options="net !check"  # fetch dependencies, no tests
-source="$pkgname-$pkgver.tar.gz::https://github.com/pop-os/cosmic-session/archive/refs/tags/epoch-$_upstreamver.tar.gz"
+source="
+	$pkgname-$pkgver.tar.gz::https://github.com/pop-os/cosmic-session/archive/refs/tags/epoch-$_upstreamver.tar.gz
+	0001-justfile-use-prefix-in-dconf-profile-path.patch
+	0002-justfile-install-dconf-profile.patch
+"
 builddir="$srcdir/$pkgname-epoch-$_upstreamver"
 
 prepare() {
@@ -60,4 +64,6 @@ package() {
 
 sha512sums="
 bbaab2d7f5e88aaefaa3d893c6b5007820b7dda81fdfa4cdddbb63ecbe122f3e9a360ed27e276da2362af97c6151472d1009f0e0e79c4771161ec181f6777bcb  cosmic-session-1.0.0_alpha6.tar.gz
+ad6c0f6a03aee72e6d23b0105fe5a2cc0a33c5fbbfc216e1533fb01d09a7ee855659cc539c9ea62c91e91d83a19755522890f246dca47d48c40cb7ef8cdb267c  0001-justfile-use-prefix-in-dconf-profile-path.patch
+94813d975d66303b15b07447a3ab919938bdd7794a68234195bc9ca87280df7e71b7c6fcaea1acdaeb65d55b68c47bc325bf0265d7dfebb24a1af11badef4ffc  0002-justfile-install-dconf-profile.patch
 "
