testing/odin: upgrade to 0.2025.04
https://github.com/odin-lang/Odin/releases/tag/dev-2025-04

--- a/testing/odin/APKBUILD
+++ b/testing/odin/APKBUILD
@@ -1,10 +1,11 @@
 maintainer="fossdd <fossdd@pwned.life>"
 pkgname=odin
 _pkgname=Odin
-pkgver=0.2025.03
-_realver=dev-2025-03
+pkgver=0.2025.04
+_realver=${pkgver/0./dev-}
+_realver=${_realver/./-}
 pkgrel=0
-_llvmver=19
+_llvmver=20
 pkgdesc="Fast, concise, readable, pragmatic and open sourced programming language"
 url="https://odin-lang.org/"
 arch="x86_64 aarch64"
@@ -86,5 +87,5 @@ vendor() {
 }
 
 sha512sums="
-341a3b16bd9f1a899e6fbcb3aa8d310253c0e9cca75ce3f404141e41fd791bf067089199d0fbfb4b0bc9b7b812628714fb97c5af9443581e65c1d58353b320de  odin-0.2025.03.tar.gz
+4bc542df133d6253950e1ca1e30e77b56629131fc71005c65b6c11ec35759c8bb93bdfb6b7a8db3abfd43d7efac36d79452c9a98115e21e917ed783b4c1defb5  odin-0.2025.04.tar.gz
 "
