community/py3-pytools: upgrade to 2025.1.2
https://github.com/inducer/pytools/compare/v2023.1.1...v2025.1.2

--- a/community/py3-pytools/APKBUILD
+++ b/community/py3-pytools/APKBUILD
@@ -1,23 +1,23 @@
 # Contributor: Leo <thinkabit.ukim@gmail.com>
 # Maintainer:
 pkgname=py3-pytools
-pkgver=2023.1.1
-pkgrel=1
+pkgver=2025.1.2
+pkgrel=0
 pkgdesc="Collection of tools for Python3"
 url="https://github.com/inducer/pytools"
 arch="noarch"
 license="MIT"
 depends="
 	py3-platformdirs
+	py3-typing-extensions
 	"
 makedepends="
 	py3-gpep517
-	py3-setuptools
-	py3-wheel
+	py3-hatchling
 	"
 checkdepends="
 	py3-numpy
-	py3-pytest-xdist
+	py3-pytest
 	"
 subpackages="$pkgname-pyc"
 source="$pkgname-$pkgver.tar.gz::https://github.com/inducer/pytools/archive/v$pkgver.tar.gz"
@@ -32,14 +32,18 @@ build() {
 check() {
 	python3 -m venv --clear --without-pip --system-site-packages .testenv
 	.testenv/bin/python3 -m installer .dist/*.whl
-	.testenv/bin/python3 -m pytest -n auto
+	# some tests depend on siphash24 which isn't packaged
+	# https://github.com/inducer/pytools/pull/251
+	.testenv/bin/python3 -m pytest --ignore pytools/test/test_persistent_dict.py
 }
 
 package() {
 	python3 -m installer -d "$pkgdir" \
 		.dist/*.whl
+	# Tests shouldn't be included
+	rm -r "$pkgdir"/usr/lib/python*/site-packages/pytools/test
 }
 
 sha512sums="
-caff0725ef616501ff3c01e63d1c37530a10672df203302f94a57a03c28b32b2b0eaa6b226ee7827aad3a414713f927d6d971b3cc74b01b202ed8e38a02158a8  py3-pytools-2023.1.1.tar.gz
+0f8552328f0b76e8f681ee90e074dcb58071955f0e0a8fdaabdd42bdcc6a7a1d24a8a731956d63897c290c689b73ebf1ef644dbeb03c6501155271a2be81e877  py3-pytools-2025.1.2.tar.gz
 "
