community/evince: add -dbg subpackage
evince regularly segfaults on PDF forms on my system, add the -dbg
subpackage to be able to easily debug this for future crashes.

--- a/community/evince/APKBUILD
+++ b/community/evince/APKBUILD
@@ -3,7 +3,7 @@
 # Maintainer: team/gnome <pabloyoyoista@postmarketos.org>
 pkgname=evince
 pkgver=48.0
-pkgrel=0
+pkgrel=1
 pkgdesc="Simple document viewer for GTK+"
 url="https://apps.gnome.org/Evince"
 arch="all"
@@ -39,7 +39,7 @@ makedepends="
 	libsecret-dev
 	meson
 	"
-subpackages="$pkgname-dev $pkgname-doc $pkgname-lang $pkgname-libs"
+subpackages="$pkgname-dbg $pkgname-dev $pkgname-doc $pkgname-lang $pkgname-libs"
 source="https://download.gnome.org/sources/evince/${pkgver%%.*}/evince-$pkgver.tar.xz"
 
 # secfixes:
