--- a/testing/3proxy/APKBUILD
+++ b/testing/3proxy/APKBUILD
@@ -15,6 +15,7 @@ install="3proxy.pre-install"
 subpackages="$pkgname-doc $pkgname-openrc"
 source="$pkgname-$pkgver.tar.gz::https://github.com/3proxy/3proxy/archive/$pkgver.tar.gz
 	gcc14.patch
+	install.patch
 	$pkgname.initd
 	"
 
@@ -35,5 +36,6 @@ package() {
 sha512sums="
 d3316f6ee1217e580ce593a7bfd9d76672487a89862f247373b0acf3ea207887c758168e33b25db9fc974063deab0826c20d455cab2536d03eee49d8bddda6b5  3proxy-0.9.4.tar.gz
 5ad637d140ce27a5334df39ae8c849ef054a24fd8165174104efa964786f985606cd0e0ce60b4daaf9dcc4fb34e192645ff7540eaa43ce890fcdbe81c8063e1d  gcc14.patch
+8f7dddb7346176bd0612b4a65d8f3bdea7bf2180d8fbda60a50b3a408067ccc91b6820abf912402a2ea5f0eea7a1add5645490103deac26a176edc5d6779bf33  install.patch
 043fa5784623e29961ae92f5370598d420e55da6d04f6421b585ac050694982765d6b57ee0276a10738bc8ad0e49ddc4edf6ef288bb9c68e7da11b572066688e  3proxy.initd
 "
