--- a/main/xz/APKBUILD
+++ b/main/xz/APKBUILD
@@ -13,6 +13,8 @@ subpackages="$pkgname-static $pkgname-dev $pkgname-doc $pkgname-libs"
 source="https://github.com/tukaani-project/xz/archive/refs/tags/v$pkgver/xz-$pkgver.tar.gz"
 
 # secfixes:
+#   5.6.1-r0:
+#     - CVE-2025-31115
 #   5.2.5-r1:
 #     - CVE-2022-1271
 #   5.6.1-r2:
