--- a/main/openvpn/APKBUILD
+++ b/main/openvpn/APKBUILD
@@ -1,7 +1,7 @@
 # Contributor: Valery Kartel <valery.kartel@gmail.com>
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=openvpn
-pkgver=2.6.13
+pkgver=2.6.14
 pkgrel=0
 pkgdesc="Robust, and highly configurable VPN (Virtual Private Network)"
 url="https://openvpn.net/"
@@ -28,6 +28,8 @@ source="https://build.openvpn.net/downloads/releases/openvpn-$pkgver.tar.gz
 	"
 
 # secfixes:
+#   2.6.14-r0:
+#     - CVE-2025-2704
 #   2.6.11-r0:
 #     - CVE-2024-5594
 #     - CVE-2024-28882
@@ -90,7 +92,7 @@ pam() {
 }
 
 sha512sums="
-26a6c417e3d753e0845fc4ef92c5e5a6befedc3e830dc5e9236f5664ef9f4fffb6bc7c59db53567fb4bbb1f1c47860f5caa10b82e86daa6b2e12734f940a1e13  openvpn-2.6.13.tar.gz
+c94b45ef5b455a15d7841e6bf5e5f441906d641f699ac84c5987b2fc9f1159f38fc5a5af4b22c0f531ce424b18301cfdf08bb496afd1bdbca78e37238bd28fbc  openvpn-2.6.14.tar.gz
 42eda00f64727e6a1c3c74a02a5e99f34bd1361935fef8f807f16515e553ae644d3b054f40e8a352138db646aa3553e3f4ce6f5c10354191bef745ff99245f46  openvpn.initd
 1f14d4bd7a4a026c276af048ce647501c15358c6b0d184e95c49be5b8184188c8edafb76ed94835cdbb314187ee3b5b3ccd852e3a47add0599814c402309bece  openvpn.confd
 b8fd9d9d1cdfc70c38f3678de4bea760133c8f5fdc46dec9b41c8eb68d0299802379d77a25cea2e78d04b1af9accf7563d4b1022caef30f49d9ae7f1084eb828  openvpn.up
