--- a/community/incus/APKBUILD
+++ b/community/incus/APKBUILD
@@ -3,8 +3,8 @@
 # Contributor: Francesco Colista <fcolista@alpinelinux.org>
 # Maintainer: Leonardo Arena <rnalrd@alpinelinux.org>
 pkgname=incus
-pkgver=6.0.3 #LTS releases only
-pkgrel=4
+pkgver=6.0.4 #LTS releases only
+pkgrel=0
 pkgdesc="Powerful system container and virtual machine manager"
 url="https://github.com/lxc/incus"
 arch="all"
@@ -53,7 +53,7 @@ subpackages="$pkgname-client
 	$pkgname-bash-completion:bashcomp:noarch
 	$pkgname-vm:vm:noarch
 	"
-install="$pkgname.pre-install"
+install="$pkgname.pre-install $pkgname.post-upgrade"
 options="net"
 source="$pkgname-$pkgver.tar.gz::https://github.com/lxc/incus/archive/refs/tags/v$pkgver.tar.gz
 	incusd.confd
@@ -65,14 +65,17 @@ source="$pkgname-$pkgver.tar.gz::https://github.com/lxc/incus/archive/refs/tags/
 	"
 
 _tools="fuidshift
-	generate
+	generate-config
+	generate-database
 	incus
 	incus-benchmark
 	incus-migrate
 	incus-simplestreams
 	lxc-to-incus
 	lxd-to-incus
+	mini-oidc
 	sysinfo
+	tls2jwt
 	"
 
 _project="github.com/lxc/incus"
@@ -197,7 +200,7 @@ check() {
 }
 
 sha512sums="
-57e02e0059fbe8b154bfc2a84aaf242ff458614c50443ac8235ff835b5a33ffd43ea72b457c33284a40ac952098da8f87a2d79f394d892b98b54245b8a537da8  incus-6.0.3.tar.gz
+2859a81ca0d99127f8683232ce7cffb04f1c457ec0a408c20d6434641163946789b969081d0d8c93d7033cac9bfa6a2e7e6a97809c06121b6b03bc1cad5f1f72  incus-6.0.4.tar.gz
 0340f06589acc1509d6cf4c844320f23a40e8da9d6fd1aab59b7424b286bb109e81ded97e26b9a1467f64f378914f4d13f9726c48188468900ab8d88eb528d91  incusd.confd
 ca8762648020b4c933879a7a01b3f6699e9efc1dc1141228342e6619d7e9b07b13d359121767d8cd1ce6d83752ced226964138040454eebec17a3479acdbcda3  incusd.initd
 a495ca525f2d98771e076026e9046f5d120aa929ed114cae330829ad698c4dbc5d80ed815328f3558584520f6c8d44d7b037721eb977b70f0ad288f6ad19e9cf  incus-agent.initd
