community/py3-cli_helpers: upgrade to 2.4.0

--- a/community/py3-cli_helpers/APKBUILD
+++ b/community/py3-cli_helpers/APKBUILD
@@ -1,9 +1,10 @@
 # Contributor: Thomas Boerger <thomas@webhippie.de>
 # Maintainer: omni <omni+alpine@hack.org>
+maintainer="omni <omni+alpine@hack.org>"
 pkgname=py3-cli_helpers
 _pkgname=cli_helpers
-pkgver=2.3.1
-pkgrel=1
+pkgver=2.4.0
+pkgrel=0
 pkgdesc="A helper library for command-line interfaces"
 url="https://pypi.org/project/cli-helpers"
 arch="noarch"
@@ -30,5 +31,5 @@ package() {
 }
 
 sha512sums="
-ea2449f7d8b87da62a6a2bc8a10eb726a927b0cf62431016125aa30a6f7bcbee3b396364a78f749cb22c86427ca8fc7e46aaac19ea0f93ef6dee661653c2f5c0  py3-cli_helpers-2.3.1.tar.gz
+33d2d706634bcb0143af0fbc2df1baae58004c7544793367cfc8d80ca15b0ac709730ec4b5dfb6a7cdb199323cb153c69988b4127d8bf218040e7be1a9408737  py3-cli_helpers-2.4.0.tar.gz
 "
