--- a/community/sd-tools/APKBUILD
+++ b/community/sd-tools/APKBUILD
@@ -1,8 +1,7 @@
-# Contributor: fossdd <fossdd@pwned.life>
-# Maintainer: fossdd <fossdd@pwned.life>
+maintainer="fossdd <fossdd@pwned.life>"
 pkgname=sd-tools
 pkgver=0.99.0
-pkgrel=0
+pkgrel=1
 pkgdesc="Standalone, cleaned up utilities from systemd"
 url="https://github.com/chimera-linux/sd-tools"
 arch="all"
@@ -16,12 +15,8 @@ makedepends="
 subpackages="$pkgname-doc"
 source="$pkgname-$pkgver.tar.gz::https://github.com/chimera-linux/sd-tools/archive/refs/tags/v$pkgver.tar.gz
 	drop-bash-dep.patch
+	32bit.patch
 	"
-
-case "$CARCH" in
-	armhf|armv7|x86)
-		options="$options !check";; # https://github.com/chimera-linux/sd-tools/issues/1
-esac
 
 export CC=clang
 
@@ -44,4 +39,5 @@ package() {
 sha512sums="
 f82471a33f204766977c24a56c78ad41a295cb7b7c8190bdad4d40c45db67677c3bb2f71222fc02ca1c42653bc60b2cf742b0114b5bfc2d9efdfc238c866c52f  sd-tools-0.99.0.tar.gz
 f64e1cc6b7f9ddcb97d13080e0e1b12841426247b1f27eee62bfda122e77c0673f669904c513bbebb94232b8f4c055fdbaa1b75c83294b1279ef7503fa9464ee  drop-bash-dep.patch
+7562ed1a10fc730c4befd0df834ca4f348a7cdc5c9ba6dd5ebfdcfabbef9c094fc5d42373b0f214969e04f2a43e50eebeb4417a3b37b2e99cbeaffa06af72e46  32bit.patch
 "
