community/py3-xxxswf: fix usage with newer python versions

--- a/community/py3-xxxswf/APKBUILD
+++ b/community/py3-xxxswf/APKBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Duncan Bellamy <dunk@denkimushi.com>
 pkgname=py3-xxxswf
 pkgver=2.0.0
-pkgrel=4
+pkgrel=5
 pkgdesc="script for carving, scanning, compressing, decompressing and analyzing Flash SWF files"
 url="https://bitbucket.org/Alexander_Hanel/xxxswf/src/master/"
 arch="noarch"
@@ -11,7 +11,9 @@ options="!check" # no testsuite in pypi archive
 depends="python3"
 makedepends="py3-setuptools"
 subpackages="$pkgname-pyc"
-source="https://files.pythonhosted.org/packages/source/x/xxxswf/xxxswf-$pkgver.tar.gz"
+source="https://files.pythonhosted.org/packages/source/x/xxxswf/xxxswf-$pkgver.tar.gz
+	python3.patch
+	"
 builddir="$srcdir/xxxswf-$pkgver"
 
 build() {
@@ -23,4 +25,5 @@ package() {
 
 sha512sums="
 5c324fc0d1e22c522f8ea60389faa749d43bbf79a2c096984470892093ba72cb84f20b2b0f84454bd953b558bcce33542ec674c9b1ff52c72b511d76fe993295  xxxswf-2.0.0.tar.gz
+8935a9197fb447f8625d1250bf29a34a8685af822a3281d150e72fbdf3d21bf9903ad606a583a79bfc04a18df7aba3f7647cfdabcdcb3a45b5f763cb4475fe2a  python3.patch
 "
