testing/tomcat9: security upgrade to 9.0.99

--- a/testing/tomcat9/APKBUILD
+++ b/testing/tomcat9/APKBUILD
@@ -1,8 +1,8 @@
 # Contributor: Holger Jaekel <holger.jaekel@gmx.de>
 # Maintainer: Holger Jaekel <holger.jaekel@gmx.de>
 pkgname=tomcat9
-pkgver=9.0.98
-pkgrel=1
+pkgver=9.0.99
+pkgrel=0
 pkgdesc="Open source implementation of the Java Servlet 4.0 and JavaServer Pages 2.3 technologies"
 url="https://tomcat.apache.org/"
 arch="noarch !x86 !armv7 !armhf !ppc64le !riscv64 !loongarch64" # eclipse-ecj availability
@@ -26,6 +26,8 @@ source="
 builddir=$srcdir/apache-${pkgname//9/}-$pkgver
 
 # secfixes:
+#   9.0.99-r0:
+#     - CVE-2025-24813
 #   9.0.80-r0:
 #     - CVE-2023-41080
 #   9.0.73-r0:
@@ -125,6 +127,6 @@ openrc() {
 }
 
 sha512sums="
-07d87286e8ee84bb291069c596cf36233e56a14e3ecb6d65eea0fa7c7042ce5e75f5db31f210b96b6b25b80b34e626dd26c5a6ed5c052384a8587d62658b5e16  apache-tomcat-9.0.98.tar.gz
+bf406b3e288e1732d82d08f54e160095451a6cc969f72adf395c074d6d08893ef1ccd2afcd55f01ca8e54131f587c88055832f36330a1ede0cc2f84440cf54df  apache-tomcat-9.0.99.tar.gz
 7d16b14977c22e1ae998d15a0a83a574624b62c722a0adbfd05a4105581eee347d38e366a269ebca4c8fa894c3718d6fbdcea0e0974d20407075ec2af6ea07a4  10-daemon.patch
 "
