--- a/testing/ircd-hybrid/APKBUILD
+++ b/testing/ircd-hybrid/APKBUILD
@@ -2,13 +2,16 @@
 # Maintainer: Celeste <cielesti@protonmail.com>
 maintainer="Celeste <cielesti@protonmail.com>"
 pkgname=ircd-hybrid
-pkgver=8.2.46
+pkgver=8.2.47
 pkgrel=0
 pkgdesc="Lightweight and high-performance Internet Relay Chat daemon (IRCd)"
 url="https://github.com/ircd-hybrid/ircd-hybrid"
 arch="all"
 license="GPL-2.0-or-later"
-makedepends="openssl-dev"
+makedepends="
+	jansson-dev
+	openssl-dev
+	"
 subpackages="$pkgname-doc"
 source="$pkgname-$pkgver.tar.gz::https://github.com/ircd-hybrid/ircd-hybrid/archive/$pkgver.tar.gz
 	include-signal.h.patch
@@ -43,6 +46,6 @@ package() {
 }
 
 sha512sums="
-5456b6297857c32021caeac951f288f6450efd7cf57af557c201799392b440b0fdf14d46f060c0ff0ba951d53cddc2fdfd90b8be4134edd221be31642f1d2aa9  ircd-hybrid-8.2.46.tar.gz
+c4646d43bf27b592563e3b500963d924d0111175737caa99d082822af185bce7b2de6156dc04719120ebaf30804deb64c953fec523d2caeb11f809ff4c2fada5  ircd-hybrid-8.2.47.tar.gz
 82540a0af3af205651c927831828e49b519d7e5d41c2b9e67e7f694e250b5e0cf75dde0a3297f58a6d66951a7bac428439113b3e1bb49fb03c868314cdc994b2  include-signal.h.patch
 "
