community/py3-multidict: upgrade to 6.3.2
https://github.com/aio-libs/multidict/blob/v6.3.2/CHANGES.rst

--- a/community/py3-multidict/APKBUILD
+++ b/community/py3-multidict/APKBUILD
@@ -3,19 +3,17 @@
 # Maintainer:
 pkgname=py3-multidict
 _pkgname=multidict
-pkgver=6.0.5
-pkgrel=1
+pkgver=6.3.2
+pkgrel=0
 pkgdesc="multidict implementation"
 url="https://github.com/aio-libs/multidict/"
 arch="all"
 license="Apache-2.0"
 depends="python3"
-checkdepends="py3-pytest py3-pytest-cov"
 makedepends="py3-gpep517 python3-dev py3-setuptools cython py3-wheel"
+checkdepends="py3-pytest py3-pytest-cov py3-pytest-codspeed py3-objgraph"
 subpackages="$pkgname-pyc"
-source="$_pkgname-$pkgver.tar.gz::https://github.com/aio-libs/multidict/archive/v$pkgver.tar.gz
-	no-exclude_also.patch
-	"
+source="$_pkgname-$pkgver.tar.gz::https://github.com/aio-libs/multidict/archive/v$pkgver.tar.gz"
 builddir="$srcdir/$_pkgname-$pkgver"
 
 build() {
@@ -37,6 +35,5 @@ package() {
 }
 
 sha512sums="
-500d3b2a139d40442462a2b49f9dd0c01631643ef9905367d8b7c472a1030437c26a042a28e11ba94058a17821628d96f19ec6ca479d5831e2f1263ff0069871  multidict-6.0.5.tar.gz
-dd8afd679dd47dde1a7240a1f3f21d3f6096c79ceee6356055c44977ab075efee7d4fb747d655e63580a1c1fe6079b644403b9f2b831f4de654bf063a3b0f3f9  no-exclude_also.patch
+aec44734a3255eefcce5f0bf037b465eb536f65860fe410f1c249042286471cee2933004a0380579a701475a63931ca6615cde85b0c840af70db87268e6e3f8a  multidict-6.3.2.tar.gz
 "
