community/py3-multidict: take over maintainership

--- a/community/py3-multidict/APKBUILD
+++ b/community/py3-multidict/APKBUILD
@@ -1,6 +1,6 @@
 # Contributor: Francesco Colista <fcolista@alpinelinux.org>
 # Contributor: Antoine Fontaine <antoine.fontaine@epfl.ch>
-# Maintainer:
+maintainer="fossdd <fossdd@pwned.life>"
 pkgname=py3-multidict
 _pkgname=multidict
 pkgver=6.3.2
