community/libcamera: upgrade to 0.5.0

--- a/community/libcamera/APKBUILD
+++ b/community/libcamera/APKBUILD
@@ -1,8 +1,8 @@
 # Contributor: Luca Weiss <luca@lucaweiss.eu>
 maintainer="Luca Weiss <luca@lucaweiss.eu>"
 pkgname=libcamera
-pkgver=0.4.0
-pkgrel=2
+pkgver=0.5.0
+pkgrel=0
 pkgdesc="Linux camera framework"
 url="https://libcamera.org/"
 arch="all"
@@ -21,6 +21,7 @@ makedepends="$depends_dev
 	graphviz
 	gtest-dev
 	libevent-dev
+	libpisp-dev
 	libunwind-dev
 	linux-headers
 	meson
@@ -146,6 +147,6 @@ py3() {
 }
 
 sha512sums="
-8a8e769239901b7af1099fa9c4c11419f722f12505311b3f3b97bac6a0cfd36275da98bf9bcdaedfffb9f414f904fc6e3cf649903178713ec269d8585b40fe20  libcamera-v0.4.0.tar.gz
+afc196cc693ba9fedd352f3a31dbe0f4dd1c28f50e7d5198d0c87fd0b8920eb497f51facd80960a96204c1e2803f8bf15ceadca7a7aa2d1aa38e51171befcc21  libcamera-v0.5.0.tar.gz
 22167a4eceb6d1b40b0b7c45fdf116c71684f5340de7f767535cb8e160ad9d2ae0f00cb3d461f73a344520a48a4641cf46226841d78bee06bfbfd2a91337f754  qcam.desktop
 "
