--- a/community/ostree/APKBUILD
+++ b/community/ostree/APKBUILD
@@ -1,8 +1,8 @@
 # Contributor: André Klitzing <aklitzing@gmail.com>
 # Maintainer: André Klitzing <aklitzing@gmail.com>
 pkgname=ostree
-pkgver=2025.1
-pkgrel=2
+pkgver=2025.2
+pkgrel=0
 pkgdesc="Operating system and container binary deployment and upgrades"
 url="https://github.com/ostreedev/ostree"
 arch="all"
@@ -35,9 +35,7 @@ subpackages="
 	$pkgname-bash-completion:bashcomp:noarch
 	$pkgname-mkinitfs::noarch
 	"
-source="https://github.com/ostreedev/ostree/releases/download/v$pkgver/libostree-$pkgver.tar.xz
-	prctl.patch
-	"
+source="https://github.com/ostreedev/ostree/releases/download/v$pkgver/libostree-$pkgver.tar.xz"
 builddir="$srcdir/lib$pkgname-$pkgver"
 # todo: fails to make stuff in var/tmp in root
 options="!check"
@@ -122,6 +120,5 @@ mkinitfs() {
 }
 
 sha512sums="
-ed699c9143a819ef289846ba4c10fc57af298f2d996982192091813a4e085e3e61faf04167d02c19b6bcf0efce64aa78658e3003558b33c5d09161c93ef728c0  libostree-2025.1.tar.xz
-58699a87db03a10dab50b16736d536edd24fc87487569ad7137c3d70f05a6b56bdb8a2609de5b0bf77f1e8f25e6b5475e1fffa66f79f0cd19d8a9744a699b9cf  prctl.patch
+5e732a22da238b378e779c3886445977da49e2f810d18cb3580b030175e5e9db53408bcba245e840cdaea7e193907d284a369c42b3b7104c270e58a8c38f4f6a  libostree-2025.2.tar.xz
 "
