--- a/community/strawberry/APKBUILD
+++ b/community/strawberry/APKBUILD
@@ -1,8 +1,8 @@
 # Contributor: knuxify <knuxify@gmail.com>
 # Maintainer: knuxify <knuxify@gmail.com>
 pkgname=strawberry
-pkgver=1.2.7
-pkgrel=1
+pkgver=1.2.8
+pkgrel=0
 pkgdesc="Strawberry Music Player"
 url="https://strawberrymusicplayer.org"
 # riscv64: build errors ("job terminated due to signal 11" on lconvert)
@@ -31,6 +31,7 @@ makedepends="
 	qt6-qtbase-dev
 	qt6-qtbase-private-dev
 	qt6-qttools-dev
+	rapidjson-dev
 	samurai
 	sparsehash
 	sqlite-dev
@@ -61,5 +62,5 @@ package() {
 }
 
 sha512sums="
-a343abd9c45002acee37d253001181c939c9d9ebe7a888c0f5c436f610825e601b0ed2c789b372b8f07f60e8d5ce8b9f7d6e715f8a0d1a3fb77e7b8260192f4b  strawberry-1.2.7.tar.xz
+a6629767d42347aa3f7b9051820e6e4f807880d87f3ec53c2dcba855362047f79c7916d32faf4f514df7f1678399a1717202123eeb5a041e5ac3ba0f5ee3de09  strawberry-1.2.8.tar.xz
 "
