community/uutils: fix broken symlinks in subpackages
sloppy me, didn't notice since I don't use these

- uutils-coreutils-hostname
- uutils-coreutils-more
- uutils-coreutils-stat

--- a/community/uutils/APKBUILD
+++ b/community/uutils/APKBUILD
@@ -2,7 +2,7 @@
 maintainer="omni <omni+alpine@hack.org>"
 pkgname=uutils
 pkgver=0.0.28
-pkgrel=4
+pkgrel=5
 pkgdesc="Rust rewrite of the GNU coreutils"
 # s390x: blocked by nix crate
 arch="all !s390x"
@@ -141,7 +141,7 @@ _hostname() {
 
 	# busybox path
 	install -dm0755 "$subpkgdir"/bin/
-	ln -s "$pkgname" "$subpkgdir"/bin/hostname
+	ln -s ../usr/bin/"$pkgname" "$subpkgdir"/bin/hostname
 }
 
 _more() {
@@ -150,7 +150,7 @@ _more() {
 
 	# busybox/util-linux-misc path
 	install -dm0755 "$subpkgdir"/bin/
-	ln -s "$pkgname" "$subpkgdir"/bin/more
+	ln -s ../usr/bin/"$pkgname" "$subpkgdir"/bin/more
 }
 
 _more_doc() {
@@ -170,7 +170,7 @@ _stat() {
 
 	# busybox path
 	install -dm0755 "$subpkgdir"/bin/
-	ln -s "$pkgname" "$subpkgdir"/bin/stat
+	ln -s ../usr/bin/"$pkgname" "$subpkgdir"/bin/stat
 }
 
 sha512sums="
