community/uutils: fix broken symlinks in subpackages
sloppy me, didn't notice since I don't use these

- uutils-coreutils-hostname
- uutils-coreutils-more
- uutils-coreutils-stat

--- a/community/uutils/APKBUILD
+++ b/community/uutils/APKBUILD
@@ -2,7 +2,7 @@
 maintainer="omni <omni+alpine@hack.org>"
 pkgname=uutils
 pkgver=0.0.30
-pkgrel=0
+pkgrel=1
 pkgdesc="Rust rewrite of the GNU coreutils"
 arch="all"
 url="https://uutils.github.io/coreutils/"
@@ -140,7 +140,7 @@ _hostname() {
 
 	# busybox path
 	install -dm0755 "$subpkgdir"/bin/
-	ln -s "$pkgname" "$subpkgdir"/bin/hostname
+	ln -s ../usr/bin/"$pkgname" "$subpkgdir"/bin/hostname
 }
 
 _more() {
@@ -149,7 +149,7 @@ _more() {
 
 	# busybox/util-linux-misc path
 	install -dm0755 "$subpkgdir"/bin/
-	ln -s "$pkgname" "$subpkgdir"/bin/more
+	ln -s ../usr/bin/"$pkgname" "$subpkgdir"/bin/more
 }
 
 _more_doc() {
@@ -169,7 +169,7 @@ _stat() {
 
 	# busybox path
 	install -dm0755 "$subpkgdir"/bin/
-	ln -s "$pkgname" "$subpkgdir"/bin/stat
+	ln -s ../usr/bin/"$pkgname" "$subpkgdir"/bin/stat
 }
 
 sha512sums="
