--- a/community/py3-yarl/APKBUILD
+++ b/community/py3-yarl/APKBUILD
@@ -1,13 +1,13 @@
 # Contributor: Fabian Affolter <fabian@affolter-engineering.ch>
 maintainer="fossdd <fossdd@pwned.life>"
 pkgname=py3-yarl
-pkgver=1.18.3
+pkgver=1.19.0
 pkgrel=0
 pkgdesc="Yet another URL library"
 url="https://yarl.aio-libs.org/"
 license="Apache-2.0"
 arch="all"
-depends="python3 py3-idna py3-multidict"
+depends="python3 py3-idna py3-multidict py3-propcache"
 makedepends="
 	cython
 	py3-expandvars
@@ -46,5 +46,5 @@ package() {
 }
 
 sha512sums="
-1686c5ef1b5f3e1cebd121abb7916e45f4a9b08d941a80c34861e87f6121187ee7a553a373405a9fef2332177adf55ffe89bc9a3cabbf24e31905357fdeceba3  yarl-1.18.3.tar.gz
+95cf1f26be8497e39ce150672ac95ff36a4a695b8fbb902edb4811b601cc3f73cf8b72b45625afe957649b7a49d08588db0a7b91b46c449c64c9e55fcbda8e23  yarl-1.19.0.tar.gz
 "
