community/gajim: use gajim.org tarballs
https://dev.gajim.org/ is down rightnow and causes builder failures

--- a/community/gajim/APKBUILD
+++ b/community/gajim/APKBUILD
@@ -38,7 +38,7 @@ makedepends="
 	"
 checkdepends="xvfb-run font-dejavu py3-pytest"
 source="
-	https://dev.gajim.org/gajim/gajim/-/archive/$pkgver/gajim-$pkgver.tar.bz2
+	https://gajim.org/downloads/${pkgver%.*}/gajim-$pkgver.tar.gz
 	"
 subpackages="$pkgname-doc $pkgname-lang $pkgname-pyc"
 
@@ -67,5 +67,5 @@ lang() {
 }
 
 sha512sums="
-3ab626bb076d0efa12d2865968fd065483b95b1be1385037f9cb96bbcc0cbfca36f9cece801b8cba1a118990dc826381279669ec2602ff66e079bba59e91316e  gajim-2.0.4.tar.bz2
+33a8aa77a834c604af5e619d22094f53cd612d3ae184b7588bafdbf64534d107b8d2749cca06b4266b8f8416b68faf312deafdf5f15e5b6dec5334c480c41289  gajim-2.0.4.tar.gz
 "
