main/libarchive: security upgrade to 3.7.9

--- a/main/libarchive/APKBUILD
+++ b/main/libarchive/APKBUILD
@@ -1,7 +1,7 @@
 # Contributor: Sergei Lukin <sergej.lukin@gmail.com>
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=libarchive
-pkgver=3.7.7
+pkgver=3.7.9
 pkgrel=0
 pkgdesc="library that can create and read several streaming archive formats"
 url="https://libarchive.org/"
@@ -24,6 +24,10 @@ source="https://libarchive.org/downloads/libarchive-$pkgver.tar.xz"
 options="!check"
 
 # secfixes:
+#   3.7.9-r0:
+#     - CVE-2024-57970
+#     - CVE-2025-1632
+#     - CVE-2025-25724
 #   3.7.5-r0:
 #     - CVE-2024-20696
 #     - CVE-2024-26256
@@ -66,5 +70,5 @@ tools() {
 }
 
 sha512sums="
-2524f71f4c2ebc254a1927279be3394e820d0a0c6dec7ef835a862aa08c35756edaa4208bcdc710dd092872b59c200b555b78670372e2830822e278ff1ec4e4a  libarchive-3.7.7.tar.xz
+d8918445e2536eb29c2d6a6c8cd3671a8525be1619009a2e7c3a9c2a821b51939172dfccc25bfd62fec2a17fb01796b4f522b0ba72b31e3de9b9658c44c46345  libarchive-3.7.9.tar.xz
 "
