testing/signal-desktop: fix crash on startup.
Fixes #17058.

Fix found by @WhyNotHugo, many thanks :)

The move to pnpm seems to have broken dependency linking for the sqlite
library. Moving back to npm for the final rebuild step fixes the issue.

--- a/testing/signal-desktop/APKBUILD
+++ b/testing/signal-desktop/APKBUILD
@@ -3,7 +3,7 @@
 # Maintainer: Antoine Martin (ayakael) <dev@ayakael.net>
 pkgname=signal-desktop
 pkgver=7.47.0
-pkgrel=0
+pkgrel=1
 pkgdesc="A messaging app for simple private communication with friends"
 url="https://github.com/signalapp/Signal-Desktop/"
 # same as electron
@@ -427,7 +427,7 @@ build() {
 
 	npm_config_nodedir=/usr/include/electron/node_headers \
 	npm_config_build_from_source=true \
-	pnpm rebuild \
+	npm rebuild \
 		sharp @signalapp/better-sqlite3 spellchecker websocket \
 		utf-8-validate bufferutil fs-xattr
 
