community/wasm-tools: use the new maintainer field

--- a/community/wasm-tools/APKBUILD
+++ b/community/wasm-tools/APKBUILD
@@ -1,5 +1,4 @@
-# Contributor: Alexey Yerin <yyp@disroot.org>
-# Maintainer: Alexey Yerin <yyp@disroot.org>
+maintainer="Alexey Yerin <yyp@disroot.org>"
 pkgname=wasm-tools
 pkgver=1.228.0
 _testsuite_commit=d76759e746f3564a03f6106ae19679742f2a1831
