community/fna3d: upgrade to 25.04

--- a/community/fna3d/APKBUILD
+++ b/community/fna3d/APKBUILD
@@ -1,14 +1,13 @@
-# Contributor: Alexey Yerin <yyp@disroot.org>
-# Maintainer: Alexey Yerin <yyp@disroot.org>
+maintainer="Alexey Yerin <yyp@disroot.org>"
 pkgname=fna3d
-pkgver=25.02
+pkgver=25.04
 pkgrel=0
-_mojoshader_commit=a4326e584d0c7620ebdce1272c31aa54b2b9ca41
+_mojoshader_commit=6c90330d9ee034fd2dc957e8b805809eaddf774e
 pkgdesc="3D Graphics Library for FNA"
 url="http://fna-xna.github.io"
 arch="all"
 license="Zlib"
-makedepends="cmake samurai sdl2-dev vulkan-headers"
+makedepends="cmake samurai sdl3-dev vulkan-headers"
 subpackages="$pkgname-dev"
 source="FNA3D-$pkgver.tar.gz::https://github.com/FNA-XNA/FNA3D/archive/$pkgver.tar.gz
 	mojoshader-$_mojoshader_commit.tar.gz::https://github.com/icculus/mojoshader/archive/$_mojoshader_commit.tar.gz
@@ -46,7 +45,7 @@ package() {
 }
 
 sha512sums="
-ca06026d9db7eada15f1731b2dce2e0ba5cc140cc99e309d7596b394b634f680a84f11062f4b0ad5779680c3d839d9150e2c26cb0af96dff355d805eeed25160  FNA3D-25.02.tar.gz
-b246775b8a8b4984e13204fc779fb3534174a8a59ca3bdcfbd7a84c1f63967c21a71e5fa2fa20857811d19cfc92210d4c7ac5d9bbdc0c4de75c15a0cba3e0e1b  mojoshader-a4326e584d0c7620ebdce1272c31aa54b2b9ca41.tar.gz
+65c1038382887f369802df079bb907eff57db4101b89e8f6e74c58ff5a38bb1fe13c583ff267f0d4b3f3054c5a2ca5d75381ea79d6311fbb5237a9ddc9f3798a  FNA3D-25.04.tar.gz
+6b5400a8d1e67a74a042b60da9650a8867f66de2a6258b65b05255bdb38759af703d3ebcfe54302aa9e2caef4a167174058c6f8a8efee558c9f0244f6014e05f  mojoshader-6c90330d9ee034fd2dc957e8b805809eaddf774e.tar.gz
 fd6669a8b3fd400ccf4c79a35a148927734ed1ee43e1a0540af93e52c261a381776ce91795f9fee4fba8e344dcd98cb8e18c2fe654ca6c88601f12473f8ad8c4  install.patch
 "
