--- a/main/xen/APKBUILD
+++ b/main/xen/APKBUILD
@@ -1,7 +1,7 @@
 # Contributor: Roger Pau Monne <roger.pau@entel.upc.edu>
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=xen
-pkgver=4.19.2
+pkgver=4.20.0
 pkgrel=0
 pkgdesc="Xen hypervisor"
 url="https://www.xenproject.org/"
@@ -413,8 +413,6 @@ source="https://downloads.xenproject.org/release/xen/$pkgver/xen-$pkgver.tar.gz
 
 	hotplug-Linux-iscsi-block-handle-lun-1.patch
 
-	qemu-xen-vfio.patch
-
 	xenstored.initd
 	xenstored.confd
 	xenconsoled.initd
@@ -460,8 +458,6 @@ prepare() {
 	# remove all -Werror
 	msg "Eradicating -Werror..."
 	find . \( -name '*.mk' -o -name 'Make*' \) -exec sed -i -e 's/-Werror//g' {} +
-
-	sed -e 's,^#include <sys/signal.h>$,#include <signal.h>,g' -i tools/qemu-xen/include/qemu/osdep.h
 
 	msg "Updating config.sub..."
 	update_config_sub
@@ -636,6 +632,10 @@ qemu() {
 		# these files are only in the x86* builds
 		amove usr/lib/xen/libexec/qemu-bridge-helper
 	esac
+
+	# these files contain textrels in the QEMU release tracked by Xen 4.20
+	rm "$subpkgdir"/usr/share/qemu-xen/qemu/s390-netboot.img
+	rm "$subpkgdir"/usr/share/qemu-xen/qemu/s390-ccw.img
 }
 
 qemu_openrc() {
@@ -648,11 +648,10 @@ qemu_openrc() {
 }
 
 sha512sums="
-35147b0d755b5a603915fa5017bc021d4a238ab96ee1139dfee8e0f6ba76e64b89d5f331fbd60549682f45ee983d3d8f1cb95c53eed22373a7fa06074ca8da09  xen-4.19.2.tar.gz
+908b1ea3b86dc9e4f0b487a199973c01ed00452683cfe8a00584e085c17ab353f3efc400001ab53035b2b86e48dc31b7ad1fd5b3afdcf8d5b4cf1be035c133c6  xen-4.20.0.tar.gz
 fe3c253d03e1962ca4dd6bccd2e51817075450f51aa66e8ab9673bdd5a530dc08f1ed7817a1271ada028b0c34162f37cd6b24d84334403767caacd8206284cbb  qemu-xen_paths.patch
 1c9cb24bf67a2e84466572198315d5501627addf1ccd55d8d83df8d77d269a6696cd45e4a55601495168284e3bff58fb39853f56c46aaddd14f6191821678cf6  hotplug-vif-vtrill.patch
 8c9cfc6afca325df1d8026e21ed03fa8cd2c7e1a21a56cc1968301c5ab634bfe849951899e75d328951d7a41273d1e49a2448edbadec0029ed410c43c0549812  hotplug-Linux-iscsi-block-handle-lun-1.patch
-4d7a41e2c3f0f8ddef1585771de7d496a5c889130c013cac1e8696417bdfba70a0c330df339cbfab707933ea56a6c23cf4f0ca137c46061dda64251e45edccdc  qemu-xen-vfio.patch
 9430940692d6bfb58b1438e0f5f84cb703fbca9ce9cc157a1313ab1ceff63222a1ae31c991543b20c8fc84300df2b22f4614b27bbff32f82e17f27fcd953143c  xenstored.initd
 093f7fbd43faf0a16a226486a0776bade5dc1681d281c5946a3191c32d74f9699c6bf5d0ab8de9d1195a2461165d1660788e92a3156c9b3c7054d7b2d52d7ff0  xenstored.confd
 1dd04f4bf1890771aa7eef0b6e46f7139487da0907d28dcdbef9fbe335dcf731ca391cfcb175dd82924f637a308de00a69ae981f67348c34f04489ec5e5dc3b7  xenconsoled.initd
