--- a/community/wpewebkit/APKBUILD
+++ b/community/wpewebkit/APKBUILD
@@ -5,7 +5,7 @@ pkgver=2.46.6
 pkgrel=0
 pkgdesc="WebKit port optimized for embedded devices"
 url="https://wpewebkit.org/"
-arch="all"
+arch="all !riscv64"
 license="other"
 _llvmver=19
 makedepends="
