--- a/community/cog/APKBUILD
+++ b/community/cog/APKBUILD
@@ -5,7 +5,7 @@ pkgver=0.18.3
 pkgrel=1
 pkgdesc="simple browser for WebKit WPE"
 url="https://github.com/Igalia/cog"
-arch="all"
+arch="all !riscv64"
 license="MIT"
 makedepends="
 	cairo-dev
