--- a/main/xen/APKBUILD
+++ b/main/xen/APKBUILD
@@ -1,7 +1,7 @@
 # Contributor: Roger Pau Monne <roger.pau@entel.upc.edu>
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=xen
-pkgver=4.19.1
+pkgver=4.19.2
 pkgrel=0
 pkgdesc="Xen hypervisor"
 url="https://www.xenproject.org/"
@@ -379,6 +379,8 @@ options="!strip"
 #   4.19.0-r1:
 #     - CVE-2024-45818 XSA-463
 #     - CVE-2024-45819 XSA-464
+#   4.19.2-r0:
+#     - CVE-2025-1713 XSA-467
 
 case "$CARCH" in
 x86*)
@@ -646,7 +648,7 @@ qemu_openrc() {
 }
 
 sha512sums="
-6971d07d4eafd40186f35cf6de235badbdf0e1640974693b8fbd415876c46634094178a6157e6dfdc16af885c70ff3b7a72be35a88dcc63daf36e6eb08f9b17b  xen-4.19.1.tar.gz
+35147b0d755b5a603915fa5017bc021d4a238ab96ee1139dfee8e0f6ba76e64b89d5f331fbd60549682f45ee983d3d8f1cb95c53eed22373a7fa06074ca8da09  xen-4.19.2.tar.gz
 fe3c253d03e1962ca4dd6bccd2e51817075450f51aa66e8ab9673bdd5a530dc08f1ed7817a1271ada028b0c34162f37cd6b24d84334403767caacd8206284cbb  qemu-xen_paths.patch
 1c9cb24bf67a2e84466572198315d5501627addf1ccd55d8d83df8d77d269a6696cd45e4a55601495168284e3bff58fb39853f56c46aaddd14f6191821678cf6  hotplug-vif-vtrill.patch
 8c9cfc6afca325df1d8026e21ed03fa8cd2c7e1a21a56cc1968301c5ab634bfe849951899e75d328951d7a41273d1e49a2448edbadec0029ed410c43c0549812  hotplug-Linux-iscsi-block-handle-lun-1.patch
