--- a/main/xen/APKBUILD
+++ b/main/xen/APKBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=xen
 pkgver=4.17.5
-pkgrel=2
+pkgrel=3
 pkgdesc="Xen hypervisor"
 url="https://www.xenproject.org/"
 arch="x86_64 armv7 aarch64"
@@ -378,6 +378,8 @@ options="!strip"
 #   4.17.5-r2:
 #     - CVE-2024-45818 XSA-463
 #     - CVE-2024-45819 XSA-464
+#   4.17.5-r3:
+#     - CVE-2025-1713 XSA-467
 
 case "$CARCH" in
 x86*)
@@ -433,6 +435,7 @@ source="https://downloads.xenproject.org/release/xen/$pkgver/xen-$pkgver.tar.gz
 	xsa463-4.17-09.patch
 	xsa463-4.17-10.patch
 	xsa464.patch
+	xsa467.patch
 
 	mini-os-__divmoddi4.patch
 	qemu-xen_paths.patch
@@ -733,6 +736,7 @@ e6b59582b7c64eac4a0da91c3e2f464b8c6d49131aa553c6f07df80961194c6266a2171fc1f57688
 75bf26bd933c7f62910057c68908d4b851e34fc085f5a98be9d373f30cbac2e4ed6bab0e6ce91e73f9536ada4b0aeb89dfa45675332b220ea9e749c43f52136b  xsa463-4.17-09.patch
 99a79f2da26f3009a1c83e455cac3f8b01419339076be45b3dd2be20f1f4438fe27490505f03843529d07cc7b37b5263691d22979dba3ff125d2c7f19c10ba3d  xsa463-4.17-10.patch
 36088ea7ee041a9ea2fb88434be730572bb2f4bb3d73f807b21a76bc07aec4f243cd5c8ed9597cb19abe6b6a6b16d7f6714810a0e1e108e99356cfc7daefaa0e  xsa464.patch
+42500cc604091d86311505836eabfa906bf583bba85caf8e1207b1048d7fd037f5a6691355958d7f7538e4a2aaab8060ed2dee6c76456d8e4d10d7969543edbf  xsa467.patch
 2e0b0fd23e6f10742a5517981e5171c6e88b0a93c83da701b296f5c0861d72c19782daab589a7eac3f9032152a0fc7eff7f5362db8fccc4859564a9aa82329cf  gmp-4.3.2.tar.bz2
 c2bc9ffc8583aeae71cee9ddcc4418969768d4e3764d47307da54f93981c0109fb07d84b061b3a3628bd00ba4d14a54742bc04848110eb3ae8ca25dbfbaabadb  grub-0.97.tar.gz
 1465b58279af1647f909450e394fe002ca165f0ff4a0254bfa9fe0e64316f50facdde2729d79a4e632565b4500cf4d6c74192ac0dd3bc9fe09129bbd67ba089d  lwip-1.3.0.tar.gz
