community/libgdiplus: take over maintainership

--- a/community/libgdiplus/APKBUILD
+++ b/community/libgdiplus/APKBUILD
@@ -1,5 +1,5 @@
 # Contributor: Carlo Landmeter <clandmeter@alpinelinux.org>
-# Maintainer:
+maintainer="fossdd <fossdd@pwned.life>"
 pkgname=libgdiplus
 pkgver=6.1
 pkgrel=3
