--- a/community/libgdiplus/APKBUILD
+++ b/community/libgdiplus/APKBUILD
@@ -1,22 +1,16 @@
 # Contributor: Carlo Landmeter <clandmeter@alpinelinux.org>
 maintainer="fossdd <fossdd@pwned.life>"
 pkgname=libgdiplus
-pkgver=6.1
-pkgrel=3
+pkgver=6.2
+pkgrel=0
 pkgdesc="Open Source Implementation of the GDI+ API"
 url="https://www.mono-project.com/"
 arch="all"
 license="MIT"
-depends_dev="tiff-dev cairo-dev libexif-dev giflib-dev glib-dev pango-dev"
+depends_dev="tiff-dev cairo-dev libexif-dev giflib-dev pango-dev"
 makedepends="$depends_dev"
 subpackages="$pkgname-dev"
-source="https://download.mono-project.com/sources/libgdiplus/libgdiplus-$pkgver.tar.gz
-	"
-
-prepare() {
-	default_prepare
-	update_config_sub
-}
+source="https://dl.winehq.org/mono/sources/libgdiplus/libgdiplus-$pkgver.tar.gz"
 
 build() {
 	./configure \
@@ -37,5 +31,5 @@ package() {
 }
 
 sha512sums="
-7f176d38024d5bde4a825ad00b907006f7dd3ff174e12aba6e91df0b624431cc9b536f1bcf206998bad11f6d03e6fe5122710591f58877de0f2c08e8cb4e46cd  libgdiplus-6.1.tar.gz
+7e7d37f2de8e89da62af642be3d308b5208f4478799b9442054e0c5d3d6d9a6486cf539d72e7201cc7878e302d6aacb5b34cfbf79b71c937d8fc4d74da427b03  libgdiplus-6.2.tar.gz
 "
