--- a/main/clang20/APKBUILD
+++ b/main/clang20/APKBUILD
@@ -4,7 +4,7 @@
 # Contributor: omni <omni+alpine@hack.org>
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgver=20.1.2
-pkgrel=0
+pkgrel=1
 _sover=${pkgver%.*}
 _llvmver=${pkgver%%.*}
 _prevllvmver=$((_llvmver - 1))
@@ -58,7 +58,7 @@ prepare() {
 }
 
 # Whether is this package the default (latest) clang version.
-_default_clang="no"
+_default_clang="yes"
 
 if [ "$_default_clang" = yes ]; then
 	subpackages="
