--- a/main/clang19/APKBUILD
+++ b/main/clang19/APKBUILD
@@ -4,7 +4,7 @@
 # Contributor: omni <omni+alpine@hack.org>
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgver=19.1.7
-pkgrel=5
+pkgrel=6
 _sover=${pkgver%.*}
 _llvmver=${pkgver%%.*}
 pkgname=clang$_llvmver
@@ -57,7 +57,7 @@ prepare() {
 }
 
 # Whether is this package the default (latest) clang version.
-_default_clang="yes"
+_default_clang="no"
 
 if [ "$_default_clang" = yes ]; then
 	subpackages="
