main/llvm*: enable zstd when bootstrapping
llvm seems to use the correct zstd version now.

My guess is that this was fixed by
https://github.com/llvm/llvm-project/commit/2d4fd0b6d5d5582ebb8b521d807104235d67aee4

Reverts 3b1bc9b42287 main/llvm15: don't build zstd support in bootstrap

--- a/main/llvm17/APKBUILD
+++ b/main/llvm17/APKBUILD
@@ -115,12 +115,6 @@ build() {
 	# Auto-detect it by guessing either.
 	local ffi_include_dir="$(pkg-config --cflags-only-I libffi | sed 's|^-I||g')"
 
-	local zstd=ON
-	# tries linking host libzstd in cross
-	if [ -n "$BOOTSTRAP" ]; then
-		zstd=OFF
-	fi
-
 	# NOTE: DO NOT change CMAKE_BUILD_TYPE! Buildmodes like None will enable
 	# debug assertions for LLVM!
 	cmake -B build -G Ninja -Wno-dev -S llvm \
@@ -151,7 +145,7 @@ build() {
 		-DLLVM_ENABLE_SPHINX=OFF \
 		-DLLVM_ENABLE_TERMINFO=ON \
 		-DLLVM_ENABLE_ZLIB=ON \
-		-DLLVM_ENABLE_ZSTD=$zstd \
+		-DLLVM_ENABLE_ZSTD=ON \
 		-DLLVM_INCLUDE_BENCHMARKS=OFF \
 		-DLLVM_INCLUDE_EXAMPLES=OFF \
 		-DLLVM_INSTALL_GTEST=ON \
