--- a/main/llvm18/APKBUILD
+++ b/main/llvm18/APKBUILD
@@ -112,12 +112,6 @@ build() {
 	# Auto-detect it by guessing either.
 	local ffi_include_dir="$(pkg-config --cflags-only-I libffi | sed 's|^-I||g')"
 
-	local zstd=ON
-	# tries linking host libzstd in cross
-	if [ -n "$BOOTSTRAP" ]; then
-		zstd=OFF
-	fi
-
 	local targets= common_targets="AMDGPU;BPF;WebAssembly"
 	case "$CARCH" in
 		arm*) targets="-DLLVM_TARGETS_TO_BUILD=ARM;$common_targets";;
@@ -156,7 +150,7 @@ build() {
 		-DLLVM_ENABLE_SPHINX=OFF \
 		-DLLVM_ENABLE_TERMINFO=ON \
 		-DLLVM_ENABLE_ZLIB=ON \
-		-DLLVM_ENABLE_ZSTD=$zstd \
+		-DLLVM_ENABLE_ZSTD=ON \
 		-DLLVM_INCLUDE_BENCHMARKS=OFF \
 		-DLLVM_INCLUDE_EXAMPLES=OFF \
 		-DLLVM_INSTALL_GTEST=ON \
