--- a/main/llvm16/APKBUILD
+++ b/main/llvm16/APKBUILD
@@ -168,15 +168,15 @@ build() {
 		-DLLVM_ENABLE_CURL=FORCE_ON \
 		-DLLVM_ENABLE_DUMP=ON \
 		-DLLVM_ENABLE_EH=ON \
-		-DLLVM_ENABLE_FFI=ON \
+		-DLLVM_ENABLE_FFI=FORCE_ON \
 		-DLLVM_ENABLE_LIBCXX=OFF \
 		-DLLVM_ENABLE_LIBEDIT=OFF \
 		-DLLVM_ENABLE_PIC=ON \
 		-DLLVM_ENABLE_RTTI=ON \
 		-DLLVM_ENABLE_SPHINX=OFF \
 		-DLLVM_ENABLE_TERMINFO=ON \
-		-DLLVM_ENABLE_ZLIB=ON \
-		-DLLVM_ENABLE_ZSTD=ON \
+		-DLLVM_ENABLE_ZLIB=FORCE_ON \
+		-DLLVM_ENABLE_ZSTD=FORCE_ON \
 		-DLLVM_INCLUDE_BENCHMARKS=OFF \
 		-DLLVM_INCLUDE_EXAMPLES=OFF \
 		-DLLVM_INSTALL_UTILS=ON \
